--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: The Quant Quest
 email: teedoublequeue@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is my blog where I write about math, finance, and being a nerd.
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  teedoublequeue
